# dynamic-dealmakers

./: .gitignore  README.md  Taskfile.yml  cloudbuild.yaml  cloudbuild_evidence.yaml  cloudbuild_server.yaml  init.sql  niels_notebook.ipynb  project_infra.excalidraw  terraform.tfstate  wesleys_notebook.ipynb
.github/workflows/: pytest.yml
data/: prices_format_example.json
evidence/: .gitignore  Dockerfile  Taskfile.yml  cloudbuild.yaml  evidence.plugins.yaml  package-lock.json  package.json
evidence/components/: CustomLeaflet.svelte
evidence/components/multiselect/: Multiselect.svelte  (+1 more)
evidence/pages/: index.md  leaderboard.md  prices.md  stocks.md
infra/artifact_repository/: main.tf
infra/webshop/: cloud_run.tf  main.tf  output.tf  providers.tf  secretmanager.tf  variables.tf
runs/2024-03-29 18:32:52.110735+00:00/: opt_params.json
runs/2024-04-05 06:26:48.912047+00:00/: 2024-04-05 06:26:48.912047+00:00.json
runs/2024-04-05 12:40:46.844679+00:00/: opt_params.json
server/: Dockerfile  cloudbuild.yaml  cloudbuild_cicd.yaml  data.json  docker-compose.yml  params.json  product_data.json  products.json  pyproject.toml  requirements.txt  server.py
server/src/dynamic_pricing/: data.py  database.py  env_setting.py  model.py  price.py  scrape.py  utils.py
server/src/dynamic_pricing/model/: price_function.py  revenue.py  simulator.py  stock.py
server/src/dynamic_pricing/sql/: gerard-test.sql  init.sql  prices.sql  products.sql  purchases.sql  stocks.sql
sql/: init.sql  prices.sql  products.sql
tests/: opt_params.json  product_data.json  stock_format_example.json  test_model.py  test_serve.py
(+16 files in other folders)
